# Zested

./: .gitignore  CMakeLists.txt  Licence.md  MANIFEST.in  Makefile  News.md  Readme.md  Requirements.txt  ZestEd.py  Zested-OSX.spec  Zested-Windows.spec  Zested.py  create_python_distrib.sh  index.html  main.js  main.py  make.bat  package.json  setup.py  zested.qrc
assets/: zested.qrc
assets/css/: main.css  main.min.css
assets/ui/: editor.ui  editor_tab.ui  home.ui  main.ui
include/: pycall.hpp  speller.hpp  zested.hpp
python/zested/: __init__.py  smileys.py  tutorial.py
python/zested/gui/: __init__.py  messages.py
src/: main.cpp  pycall.cpp  speller.cpp  zested.cpp
static/css/: preview.css  pygments.css  zested.css
templates/: base.html  editor.html  index.html
zested/: __init__.py  highlight.py  main.py  render.py  ressources.py  smileys.py  tutorial.py  tutorials.py
zested/assets/: zested.qrc
zested/assets/css/: main.css
zested/assets/img/: clem.icns
zested/assets/ui/: editor_tab.ui  home.ui
zested/gui/: editor.py  loader.py  main.py
